--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ p.bold {
   width: 50%;
 }
 
-#submitButton {
+#consentButton {
   background-color: #077bff;
   /* omnibus blue */
   border: black solid 3px;
